# open-cfxmine

./: .gitmodules  CMakeLists.txt
src/: OctopusVulkanMiner.cpp  OctopusVulkanMiner.hpp  StratumClient.cc  StratumClient.h  main.cc
src/vulkan/: init-dag-items.glsl  precomputation.h
